# ticket-price-alert

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: check_tickets.yml
core/: gametime.py
notifiers/: email.py
scripts/: check_price.py
