[project]
name = "ticket-price-alert"
version = "0.1.0"
description = ""
authors = [
    {name = "Lauren Benitez",email = "laurenemiliebenitez@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)"
]

[tool.poetry]
package-mode = false


[tool.poetry.group.dev.dependencies]
vulture = "^2.14"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
